@@ -1,12 +1,15 @@
+*.dll
 *.pyc
 *.so
-*.dll
-__pycache__
-src/*.egg-info
-
+.coverage
+.coverage.*
 .installed.cfg
 .tox
+__pycache__
 bin
 build
+coverage.xml
 develop-eggs
+htmlcov/
 parts
+src/*.egg-info
