@@ -1,26 +1,8 @@
 [buildout]
 develop = .
-parts = test coverage-test coverage-report
+parts = test
 versions = versions
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.generations [test]
-
-[coverage-test]
-recipe = zc.recipe.testrunner
-eggs = ${test:eggs}
-defaults = ['--tests-pattern', '^f?tests$', '-v', '--coverage', '../../coverage']
-
-[coverage-report]
-recipe = zc.recipe.egg
-eggs = z3c.coverage
-scripts = coverage=coverage-report
-arguments = ('coverage', 'coverage/report')
-
-[versions]
-ZODB = >=4.0.0dev
-zope.container = >=4.0.0a2
-zope.publisher = >=4.0.0a2
-zope.site = >=4.0.0a1
-zope.traversing = >=4.0.0a2
